--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                     </div>
 
-                    <div class="col-lg-5 col-sm-8 m-sm-auto  ">
+                    <div class="col-lg-5 col-sm-8 m-sm-auto">
                         <img src="images/main img.svg" class="img-fluid mt-md-0 mt-5" alt="mobile-adaptive-image">
                     </div>
                 </div>
@@ -71,7 +71,7 @@
 
         <section class="lessons" id="lessons">
             <div class="container">
-                <div class="row d-flex justify-content-center">
+                <div class="row d-flex justify-content-center justify-content-xxl-start">
                     <h2 class="text-center">Уроки</h2>
                     <a href="lessons/lesson-1.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
@@ -123,12 +123,12 @@
                     </a>
                     <a href="lessons/lesson-9.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
-                            <h3 class="text-center pt-5">Урок 9 Карточки товаров и модальные окна</h3>
+                            <h3 class="text-center pt-5">Урок 9 Карточки и модальные окна</h3>
                             <img src="images/less-1.svg" alt="lesson-img">
                         </div>
                     </a>
                     
-                    <a href="lessons/lesson-9.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
+                    <a href="lessons/lesson-10.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="lesson-card d-flex flex-column justify-content-between align-items-center">
                             <h3 class="text-center pt-5">Урок 10 Вёрстка адаптивного лендинга</h3>
                             <img src="images/less-1.svg" alt="lesson-img">
