--- a/lessons/lesson-3.html
+++ b/lessons/lesson-3.html
@@ -109,21 +109,21 @@
                     <div class="listing-container col-10 m-auto">
                         <div class="col-12 text-end" onclick="copyFunc('listing_1')" id="copy-btn"><img class="d-inline copy-img" src="../images/copy-btn.svg" alt="copy-btn"></div>
                         <div class="code col-12 m-auto">
-<pre><code id="listing_1" class="language-html scroll">&ltbody>
-    &ltdiv class="container text-center">
-        &ltdiv class="row">
-            &ltdiv class="col">
+<pre><code id="listing_1" class="language-html scroll">&ltbody&gt
+    &ltdiv class="container text-center"&gt
+        &ltdiv class="row"&gt
+            &ltdiv class="col"&gt
                 Column
-            &lt/div>
-            &ltdiv class="col">
+            &lt/div&gt
+            &ltdiv class="col"&gt
                 Column
-            &lt/div>
-            &ltdiv class="col">
+            &lt/div&gt
+            &ltdiv class="col"&gt
                 Column
-            &lt/div>
-        &lt/div>
-    &lt/div>
-&lt/body>
+            &lt/div&gt
+        &lt/div&gt
+    &lt/div&gt
+&lt/body&gt
 </code></pre>
                         </div> 
                     </div>
@@ -132,10 +132,10 @@
                         В приведенном выше примере создаются три столбца одинаковой ширины для всех устройств и окон просмотра с использованием наших предопределенных классов сетки. Эти столбцы центрируются на странице вместе с родительским элементом <code>.container</code>. Ниже приведён результат исполнения кода, с добавлением некоторых стилей для большей наглядности.
                     </p>
 
-                    <img src="../images/lesson-3-imgs/cols-example.png" alt="cols-example" class="col-12 col-md-8 mt-5 lesson-img">
+                    <img src="../images/lesson-3-imgs/cols-example.png" alt="cols-example" class="col-11 col-md-8 mt-5 lesson-img">
 
                     <p>
-                        Контейнеры центрируют и дополняют ваш контент по горизонтали. Используйте .containerдля адаптивной ширины пикселей <code>.container-fluid</code> для <code>width: 100%</code> всех окон просмотра и устройств или адаптивного контейнера (например, <code>.container-md</code> ) для комбинации гибкой ширины и ширины пикселей.
+                        Контейнеры центрируют и дополняют ваш контент по горизонтали. Используйте <code>.container</code> для адаптивной ширины пикселей, <code>.container-fluid</code> для <code>width: 100%</code> всех окон просмотра и устройств или адаптивного контейнера (например, <code>.container-md</code>) для комбинации гибкой ширины и ширины пикселей.
                     </p>
 
                     <p>
@@ -155,30 +155,30 @@
                     <div class="listing-container col-10 m-auto">
                         <div class="col-12 text-end" onclick="copyFunc('listing_2')" id="copy-btn"><img class="d-inline copy-img" src="../images/copy-btn.svg" alt="copy-btn"></div>
                         <div class="code col-12 m-auto">
-<pre><code id="listing_2" class="language-html scroll">&ltdiv class="container text-center">
-    &ltdiv class="row">
-        &ltdiv class="col">
+<pre><code id="listing_2" class="language-html scroll">&ltdiv class="container text-center"&gt
+    &ltdiv class="row"&gt
+        &ltdiv class="col"&gt
             1 of 3
-        &lt/div>
-        &ltdiv class="col-6">
+        &lt/div&gt
+        &ltdiv class="col-6"&gt
             2 of 3 (wider)
-        &lt/div>
-        &ltdiv class="col">
+        &lt/div&gt
+        &ltdiv class="col"&gt
             3 of 3
-        &lt/div>
-    &lt/div>
-    &ltdiv class="row">
-        &ltdiv class="col">
+        &lt/div&gt
+    &lt/div&gt
+    &ltdiv class="row"&gt
+        &ltdiv class="col"&gt
             1 of 3
-        &lt/div>
-        &ltdiv class="col-5">
+        &lt/div&gt
+        &ltdiv class="col-5"&gt
             2 of 3 (wider)
-        &lt/div>
-        &ltdiv class="col">
+        &lt/div&gt
+        &ltdiv class="col"&gt
             3 of 3
-        &lt/div>
-    &lt/div>
-&lt/div>
+        &lt/div&gt
+    &lt/div&gt
+&lt/div&gt
 </code></pre>
                         </div> 
                     </div>
@@ -187,7 +187,7 @@
                         Ниже приведён результат исполнения кода, с добавлением некоторых стилей для большей наглядности. 
                     </p>
 
-                    <img src="../images/lesson-3-imgs/cols-example-2.png" alt="cols-example-2" class="col-12 col-md-8 mt-5 lesson-img">
+                    <img src="../images/lesson-3-imgs/cols-example-2.png" alt="cols-example-2" class="col-11 col-md-8 mt-5 lesson-img">
 
                     <p>
                         Вот так вы можете настраивать ширину отображения вашего контента.
