--- a/lessons/lesson-6.html
+++ b/lessons/lesson-6.html
@@ -47,7 +47,7 @@
                     <h2 class="col-12 col-lg-8">Bootstrap компоненты</h2>
                    
                     <p>
-                        Компоненты Bootstrap в основном построены с использованием номенклатуры базовых модификаторов. Bootstrap группирует как можно больше общих свойств в базовый класс, например <code>.btn</code>, а затем группируем отдельные стили для каждого варианта в классы-модификаторы, например <code>.btn-primary</code>  или <code>.btn-success</code> .
+                        Компоненты Bootstrap в основном построены с использованием номенклатуры базовых модификаторов. Bootstrap группирует как можно больше общих свойств в базовый класс, например <code>.btn</code>, а затем группирует отдельные стили для каждого варианта в классы-модификаторы, например <code>.btn-primary</code>  или <code>.btn-success</code> .
                     </p>
 
                     <p>
@@ -57,11 +57,11 @@
                     <div class="listing-container col-10 m-auto">
                         <div class="col-12 text-end" onclick="copyFunc('listing_1')" id="copy-btn"><img class="d-inline copy-img" src="../images/copy-btn.svg" alt="copy-btn"></div>
                         <div class="code col-12 m-auto">
-<pre><code id="listing_1" class="language-html scroll">&ltbutton class="btn btn-primary">btn-primary&lt/button>
-&ltbutton class="btn btn-secondary">btn-secondary&lt/button>
-&ltbutton class="btn btn-success">btn-success&lt/button>
-&ltbutton class="btn btn-warning">btn-warning&lt/button>
-&ltbutton class="btn btn-danger">btn-danger&lt/button>
+<pre><code id="listing_1" class="language-html scroll">&ltbutton class="btn btn-primary"&gtbtn-primary&lt/button&gt
+&ltbutton class="btn btn-secondary"&gtbtn-secondary&lt/button&gt
+&ltbutton class="btn btn-success"&gtbtn-success&lt/button&gt
+&ltbutton class="btn btn-warning"&gtbtn-warning&lt/button&gt
+&ltbutton class="btn btn-danger"&gtbtn-danger&lt/button&gt
 </code></pre>
                         </div> 
                     </div>
@@ -81,7 +81,7 @@
                     <h3>Элементы управления формой</h3>
 
                     <p>
-                        Вы можете обновить элементы управления текстовыми формами, такие как &ltinput> и &lttextarea>, с помощью пользовательских стилей, размеров, состояний фокуса и многого другого. Элементы управления формой оформлены с использованием переменных Sass и CSS, что позволяет им адаптироваться к цветовым режимам и поддерживать любой метод настройки.
+                        Вы можете обновить элементы управления текстовыми формами, такие как <code>&ltinput&gt</code> и <code>&lttextarea&gt</code>, с помощью пользовательских стилей, размеров, состояний фокуса и многого другого. Элементы управления формой оформлены с использованием переменных Sass и CSS, что позволяет им адаптироваться к цветовым режимам и поддерживать любой метод настройки.
                         
                     </p>
 
