--- a/lessons/lesson-7.html
+++ b/lessons/lesson-7.html
@@ -127,7 +127,7 @@
                     
 
                     <p>
-                        По умолчанию используется светлая тема навигации, но вы также можете применить <code>data-bs-theme="dark"</code> к <code>.navbar</code>  родительскому элементу темные цвета фона. Затем настройте с помощью .bg-*дополнительных утилит.
+                        По умолчанию используется светлая тема навигации, но вы также можете применить <code>data-bs-theme="dark"</code> к <code>.navbar</code>  родительскому элементу темные цвета фона.
                     </p>
 
                     <div class="listing-container col-10 m-auto">
@@ -149,7 +149,7 @@
                     </div>
 
                     <p>
-                        Если вы используете navs для предоставления панели навигации, обязательно добавьте элемент role="navigation"в наиболее логичный родительский контейнер <code>&ltul&gt</code> или оберните <code>&ltnav&gt</code> элемент вокруг всей навигации.
+                        Если вы используете тег <code>&ltnav&gt</code> для предоставления панели навигации, обязательно добавьте элемент <code>role="navigation"</code> в наиболее логичный родительский контейнер <code>&ltul&gt</code> или оберните <code>&ltnav&gt</code> элемент вокруг всей навигации.
                     </p>
 
                     <h3>Пагинация</h3>
