--- a/lessons/lesson-8.html
+++ b/lessons/lesson-8.html
@@ -55,7 +55,7 @@
                     </p>
 
                     <p>
-                        Единственным исключением являются автоматически воспроизводимые карусели с <code>data-bs-ride="carousel"</code>атрибутом, поскольку они инициализируются автоматически при загрузке страницы. Если вы используете автоматически воспроизводимые карусели с атрибутом data, не инициализируйте те же карусели явно с помощью метода конструктора.
+                        Единственным исключением являются автоматически воспроизводимые карусели с <code>data-bs-ride="carousel"</code> атрибутом, поскольку они инициализируются автоматически при загрузке страницы. Если вы используете автоматически воспроизводимые карусели с атрибутом data, не инициализируйте те же карусели явно с помощью метода конструктора.
                     </p>
 
                     <p>
@@ -141,7 +141,7 @@
                     <h3>Подписи</h3>
 
                     <p>
-                        Вы можете добавлять подписи к своим слайдам с помощью <code>.carousel-caption</code> элемента внутри любого файла <code>.carousel-item</code>. Их можно легко скрыть на небольших окнах просмотра, как показано ниже, с помощью дополнительных утилит отображения. Сначала мы скрываем их с помощью <code>.d-none</code> и возвращаем на устройствах среднего размера с помощью <code>.d-md-block</code>.
+                        Вы можете добавлять подписи к своим слайдам с помощью <code>.carousel-caption</code> элемента внутри любого <code>.carousel-item</code>. Их можно легко скрыть на небольших окнах просмотра, как показано ниже, с помощью дополнительных утилит отображения. Сначала мы скрываем их с помощью <code>.d-none</code> и возвращаем на устройствах среднего размера с помощью <code>.d-md-block</code>.
                     </p>
 
                     <div class="listing-container col-10 m-auto">
@@ -233,7 +233,7 @@
                     <h3>Аккордионы</h3>
 
                     <p>
-                        Чтобы сделать аккордеон складывающимся, в нем используется внутренняя функция <code>collapse</code>. Чтобы отобразить развернутый аккордеон, добавьте класс <code>.open</code> к <code>.accordion</code>.
+                        Чтобы сделать аккордеон складывающимся, в нем используется внутренняя функция <code>collapse</code>. Чтобы отобразить развернутый аккордеон, добавьте класс <code>.show</code> к <code>.accordion</code>.
                     </p>
 
                     <div class="listing-container col-10 m-auto">
