--- a/tests.html
+++ b/tests.html
@@ -40,64 +40,64 @@
 
         <section class="tests">
             <div class="container">
-                <div class="row d-flex justify-content-center">
+                <div class="row d-flex justify-content-center justify-content-xxl-start">
                     <h1 class="text-center ">Тестирование по темам уроков</h1>
-                    <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
+                    <a href="tests/test-1.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="test-card d-flex flex-column justify-content-between align-items-center">
                             <h3 class="text-center pt-5">Тест по уроку 1 Введение и установка Bootstrap</h3>
                             <img src="images/test-1.svg" alt="test-img">
                         </div>
                     </a>
-                    <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
+                    <a href="tests/test-2.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="test-card d-flex flex-column justify-content-between align-items-center">
                             <h3 class="text-center pt-5">Тест по уроку 2 На чём строится Bootstrap</h3>
                             <img src="images/test-1.svg" alt="test-img">
                         </div>
                     </a>
-                    <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
+                    <a href="tests/test-3.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="test-card d-flex flex-column justify-content-between align-items-center">
                             <h3 class="text-center pt-5">Тест по уроку 3 Столбцы и строки</h3>
                             <img src="images/test-1.svg" alt="test-img">
                         </div>
                     </a>
-                    <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
+                    <a href="tests/test-4.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="test-card d-flex flex-column justify-content-between align-items-center">
                             <h3 class="text-center pt-5">Тест по уроку 4 Адаптивные колонки и flex-классы</h3>
                             <img src="images/test-1.svg" alt="test-img">
                         </div>
                     </a>
-                    <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
+                    <a href="tests/test-5.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="test-card d-flex flex-column justify-content-between align-items-center">
                             <h3 class="text-center pt-5">Тест по уроку 5 Изображения и таблицы</h3>
                             <img src="images/test-1.svg" alt="test-img">
                         </div>
                     </a>
-                    <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
+                    <a href="tests/test-6.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="test-card d-flex flex-column justify-content-between align-items-center">
-                            <h3 class="text-center pt-5">Тест по уроку 6 Компоненты Bootstrap. Кнопки и формы</h3>
+                            <h3 class="text-center pt-5">Тест по уроку 6 Кнопки и формы</h3>
                             <img src="images/test-1.svg" alt="test-img">
                         </div>
                     </a>
-                    <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
+                    <a href="tests/test-7.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="test-card d-flex flex-column justify-content-between align-items-center">
-                            <h3 class="text-center pt-5">Тест по уроку 7 Компоненты Bootstrap. Навигация и пагинация</h3>
+                            <h3 class="text-center pt-5">Тест по уроку 7 Навигация и пагинация</h3>
                             <img src="images/test-1.svg" alt="test-img">
                         </div>
                     </a>
-                    <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
+                    <a href="tests/test-8.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="test-card d-flex flex-column justify-content-between align-items-center">
-                            <h3 class="text-center pt-5">Тест по уроку 8 Компоненты Bootstrap. Карусель и аккордионы</h3>
+                            <h3 class="text-center pt-5">Тест по уроку 8 Карусель и аккордионы</h3>
                             <img src="images/test-1.svg" alt="test-img">
                         </div>
                     </a>
-                    <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
+                    <a href="tests/test-9.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="test-card d-flex flex-column justify-content-between align-items-center">
-                            <h3 class="text-center pt-5">Тест по уроку 9 Компоненты Bootstrap. Карточки товаров и модальные окна</h3>
+                            <h3 class="text-center pt-5">Тест по уроку 9 Карточки и модальные окна</h3>
                             <img src="images/test-1.svg" alt="test-img">
                         </div>
                     </a>
 
-                    <a href="#" class="col-lg-4 col-md-6 col-sm-10 mb-5">
+                    <a href="tests/final-test.html" class="col-lg-4 col-md-6 col-sm-10 mb-5">
                         <div class="test-card d-flex flex-column justify-content-between align-items-center">
                             <h3 class="text-center pt-5">Итоговое тестирование</h3>
                             <img src="images/final-test.svg" alt="final-test-img">
