--- a/lessons/lesson-1.html
+++ b/lessons/lesson-1.html
@@ -89,7 +89,7 @@
                         3. Подключите с помощью link к вашему html файлу соответствующие bootstrap'у файлы (я рекомендую подключать bootstrap.min).
                     </p>
 
-                    <img class="col-12 col-md-5 lesson-img" src="../images/lesson-1-imgs/image1.png" alt="download-link">
+                    <img class="col-11 col-md-5 lesson-img" src="../images/lesson-1-imgs/image1.png" alt="download-link">
                     
                     <p>
                         В итоге в нашем html файле должен быть следующий код:
@@ -98,20 +98,18 @@
                     <div class="listing-container col-10 m-auto">
                         <div class="col-12 text-end" onclick="copyFunc('listing_1')" id="copy-btn"><img class="d-inline copy-img" src="../images/copy-btn.svg" alt="copy-btn"></div>
                         <div class="code col-12 m-auto">
-<pre><code id="listing_1" class="language-html scroll">&lt!DOCTYPE html>
-&lthtml lang="en">
-&lthead>
-    &ltmeta charset="UTF-8">
-    &ltmeta name="viewport" content="width=device-width, initial-scale=1.0">
-    &ltlink rel="stylesheet" href="css/bootstrap.min.css">
-    &lttitle>Document&lt/title>
-&lt/head>
-&ltbody>
-
-    &ltscript src="js/bootstrap.min.js">&lt/script>
-&lt/body>
-&lt/html>
-
+<pre><code id="listing_1" class="language-html scroll">&lt!DOCTYPE html&gt;
+    &lthtml lang=&quot;en&quot;&gt;
+    &lthead&gt;
+        &ltmeta charset=&quot;UTF-8&quot;&gt;
+        &ltmeta name=&quot;viewport&quot; content=&quot;width=device-width, initial-scale=1.0&quot;&gt;
+        &ltlink rel=&quot;stylesheet&quot; href=&quot;css/bootstrap.min.css&quot;&gt;
+        &lttitle&gt;Document&amp;lt/title&gt;
+    &lt/head&gt;
+    &ltbody&gt;
+        &ltscript src=&quot;js/bootstrap.min.js&quot;&gt;&amp;lt/script&gt;
+    &lt/body&gt;
+&lt/html&gt
 </code></pre>
                         </div> 
                     </div>
@@ -124,7 +122,7 @@
                     <div class="listing-container col-10 m-auto">
                         <div class="col-12 text-end" onclick="copyFunc('listing_2')" id="copy-btn"><img class="d-inline copy-img" src="../images/copy-btn.svg" alt="copy-btn"></div>
                         <div class="code col-12 m-auto">
-<pre><code id="listing_2" class="language-html scroll">&ltlink href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<pre><code id="listing_2" class="language-html scroll">&ltlink href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"&gt
 </code></pre>
                         </div> 
                     </div>
