--- a/lessons/lesson-5.html
+++ b/lessons/lesson-5.html
@@ -53,7 +53,7 @@
                     <div class="listing-container col-10 m-auto">
                         <div class="col-12 text-end" onclick="copyFunc('listing_1')" id="copy-btn"><img class="d-inline copy-img" src="../images/copy-btn.svg" alt="copy-btn"></div>
                         <div class="code col-12 m-auto">
-<pre><code id="listing_1" class="language-html scroll">&ltimg src="..." class="img-fluid" alt="...">
+<pre><code id="listing_1" class="language-html scroll">&ltimg src="..." class="img-fluid" alt="..."&gt
 </code></pre>
                         </div> 
                     </div>
@@ -71,9 +71,9 @@
                     <div class="listing-container col-10 m-auto">
                         <div class="col-12 text-end" onclick="copyFunc('listing_2')" id="copy-btn"><img class="d-inline copy-img" src="../images/copy-btn.svg" alt="copy-btn"></div>
                         <div class="code col-12 m-auto">
-<pre><code id="listing_2" class="language-html scroll">&ltdiv class="text-center">
-    &ltimg src="..." alt="...">
-&lt/div>
+<pre><code id="listing_2" class="language-html scroll">&ltdiv class="text-center"&gt
+    &ltimg src="..." alt="..."&gt
+&lt/div&gt
 </code></pre>
                         </div> 
                     </div>
@@ -91,10 +91,10 @@
                     <div class="listing-container col-10 m-auto">
                         <div class="col-12 text-end" onclick="copyFunc('listing_3')" id="copy-btn"><img class="d-inline copy-img" src="../images/copy-btn.svg" alt="copy-btn"></div>
                         <div class="code col-12 m-auto">
-<pre><code id="listing_3" class="language-html scroll">&ltfigure class="figure">
-    &ltimg src="..." class="figure-img img-fluid rounded" alt="...">
-    &ltfigcaption class="figure-caption text-end">A caption for the above image.&lt/figcaption>
-&lt/figure>
+<pre><code id="listing_3" class="language-html scroll">&ltfigure class="figure"&gt
+    &ltimg src="..." class="figure-img img-fluid rounded" alt="..."&gt
+    &ltfigcaption class="figure-caption text-end"&gtA caption for the above image.&lt/figcaption&gt
+&lt/figure&gt
 </code></pre>
                         </div> 
                     </div>
@@ -103,13 +103,13 @@
                         Ниже приведён результат исполнения кода, с добавлением некоторых стилей для большей наглядности. 
                     </p>
 
-                    <img class="col-12 col-md-5 lesson-img mb-5" src="../images/lesson-5-imgs/figure.png" alt="figure-image">
+                    <img class="col-11 col-md-5 lesson-img mb-5" src="../images/lesson-5-imgs/figure.png" alt="figure-image">
 
 
                     <h3>Таблицы</h3>
 
                     <p>
-                        Из-за широкого использования <code>&lttable&gt</code>элементов в сторонних виджетах, таких как календари и средства выбора дат, таблицы bootstrap являются опциональными при подключении фреймворка. Убедитесь что в случае использования таблиц bootstrap, в вашем проекте не возникнет конфликтов с другими фреймворками или библиотеками.
+                        Из-за широкого использования <code>&lttable&gt</code> элементов в сторонних виджетах, таких как календари и средства выбора дат, таблицы bootstrap являются опциональными при подключении фреймворка. Убедитесь что в случае использования таблиц bootstrap, в вашем проекте не возникнет конфликтов с другими фреймворками или библиотеками.
                     </p>
 
                     <p>
@@ -124,35 +124,35 @@
                     <div class="listing-container col-10 m-auto">
                         <div class="col-12 text-end" onclick="copyFunc('listing_4')" id="copy-btn"><img class="d-inline copy-img" src="../images/copy-btn.svg" alt="copy-btn"></div>
                         <div class="code col-12 m-auto">
-<pre><code id="listing_4" class="language-html scroll">&lttable class="table">
-    &ltthead>
-        &lttr>
-            &ltth scope="col">#&lt/th>
-            &ltth scope="col">Имя&lt/th>
-            &ltth scope="col">Фамилия&lt/th>
-            &ltth scope="col">Почта&lt/th>
-        &lt/tr>
-    &lt/thead>
-    &lttbody>
-        &lttr>
-             &ltth scope="row">1&lt/th>
-             &lttd>Марк&lt/td>
-             &lttd>Отто&lt/td>
-             &lttd>mark@gmail.com&lt/td>
-        &lt/tr>
-        &lttr>
-            &ltth scope="row">2&lt/th>
-            &lttd>Джейкоб&lt/td>
-            &lttd>Торнтон&lt/td>
-            &lttd>jacob@yahoo.com&lt/td>
-        &lt/tr>
-        &lttr>
-            &ltth scope="row">3&lt/th>
-            &lttd colspan="2">Ларри&lt/td>
-            &lttd>-&lt/td>
-        &lt/tr>
-    &lt/tbody>
-&lt/table>
+<pre><code id="listing_4" class="language-html scroll">&lttable class="table"&gt
+    &ltthead&gt
+        &lttr&gt
+            &ltth scope="col"&gt#&lt/th&gt
+            &ltth scope="col"&gtИмя&lt/th&gt
+            &ltth scope="col"&gtФамилия&lt/th&gt
+            &ltth scope="col"&gtПочта&lt/th&gt
+        &lt/tr&gt
+    &lt/thead&gt
+    &lttbody&gt
+        &lttr&gt
+            &ltth scope="row"&gt1&lt/th&gt
+            &lttd&gtМарк&lt/td&gt
+            &lttd&gtОтто&lt/td&gt
+            &lttd&gtmark@gmail.com&lt/td&gt
+        &lt/tr&gt
+        &lttr&gt
+            &ltth scope="row"&gt2&lt/th&gt
+            &lttd&gtДжейкоб&lt/td&gt
+            &lttd&gtТорнтон&lt/td&gt
+            &lttd&gtjacob@yahoo.com&lt/td&gt
+        &lt/tr&gt
+        &lttr&gt
+            &ltth scope="row"&gt3&lt/th&gt
+            &lttd colspan="2"&gtЛарри&lt/td&gt
+            &lttd&gt-&lt/td&gt
+        &lt/tr&gt
+    &lt/tbody&gt
+&lt/table&gt
 </code></pre>
                         </div> 
                     </div>
@@ -161,14 +161,14 @@
                         Ниже приведён результат исполнения кода, с добавлением некоторых стилей для большей наглядности. 
                     </p>
 
-                    <img class="col-12 col-md-8 lesson-img mb-5" src="../images/lesson-5-imgs/table.png" alt="table">
+                    <img class="col-11 col-md-8 lesson-img mb-5" src="../images/lesson-5-imgs/table.png" alt="table-example">
 
                     <p>
                         Так же для большей наглядности и интерактивности ваших таблиц можно добавить в тег <code>&lttable&gt</code> классы <code>.table-striped</code> для добавления полосок «зебры» к любой строке таблицы или класс <code>.table-hover</code> чтобы включить состояние наведения на строки таблицы для упрощённого восприятия больших таблиц. А так же классы <code>.table-bordered</code> и <code>.table-borderless</code> для создания или удаления границ в таблице.
                     </p>
 
                     <p>
-                        Так же от тега <code>&lttable&gt</code> и <code>&lrtr&gt</code> наследуются свойства классов для выравнивания содержимого ячеек, таких как <code>align-top</code>, <code>align-middle</code> и <code>align-bottom</code>.
+                        Так же от тега <code>&lttable&gt</code> и <code>&lttr&gt</code> наследуются свойства классов для выравнивания содержимого ячеек, таких как <code>align-top</code>, <code>align-middle</code> и <code>align-bottom</code>.
                     </p>
 
                     <p>
