optimization for galaxy fold and lessons syntax fixes

--- a/lessons/lesson-1.html
+++ b/lessons/lesson-1.html
@@ -107,7 +107,7 @@
         &lttitle&gt;Document&amp;lt/title&gt;
     &lt/head&gt;
     &ltbody&gt;
-        &ltscript src=&quot;js/bootstrap.min.js&quot;&gt;&amp;lt/script&gt;
+        &ltscript src=&quot;js/bootstrap.min.js&quot;&gt;&lt/script&gt;
     &lt/body&gt;
 &lt/html&gt
 </code></pre>
