--- a/lessons/lesson-4.html
+++ b/lessons/lesson-4.html
@@ -95,7 +95,7 @@
                     </p>
 
                     <p>
-                        Примените <code>display</code>  утилиты для создания контейнера flexbox и преобразуйте прямые дочерние элементы в элементы flex. Flex-контейнеры и элементы можно дополнительно модифицировать с помощью дополнительных гибких свойств.
+                        Примените <code>display</code>  утилиты для создания контейнера flexbox и преобразуйте обыные дочерние элементы в элементы flex. Flex-контейнеры и элементы можно дополнительно модифицировать с помощью дополнительных гибких свойств.
                     </p>
 
                     <div class="listing-container col-10 m-auto">
@@ -150,7 +150,7 @@
                     </p>
 
                     <p>
-                        С выравниванием дочерних элементов всё так же просто. Нужно всего лишь придать родительскому контейнеру нужный вам класс, например <code>.flex-row-reverse</code>, <code>.justify-content-sm-center</code> или <code>.align-items-lg-start</code>. Вариаций тут так же много, как и в списке выше. Для каждого, например, <code>align-items-end</code> существует ещё много вариаций с контрольными точками, которые нет смысла описывать по отдельности, а проще просто описать логику: есть свойство, и есть это же свойство с префиксом или постфиксом с значением ширины, например <code>.flex-nowrap</code> и <code>.flex-sm-nowrap</code>. С полным списком и примерами можно ознакомиться в документации. Ссылка находится в шапке.
+                        С выравниванием дочерних элементов всё так же просто. Нужно всего лишь придать родительскому контейнеру нужный вам класс, например <code>.flex-row-reverse</code>, <code>.justify-content-sm-center</code> или <code>.align-items-lg-start</code>. Вариаций тут так же много, как и в списке выше. Для каждого, например, <code>align-items-end</code> существует ещё много вариаций с контрольными точками, которые нет смысла описывать по отдельности, лучше просто описать логику: есть свойство, и есть это же свойство с префиксом, постфиксом или инфиксом, со значением ширины, например <code>.flex-nowrap</code> и <code>.flex-sm-nowrap</code>. С полным списком и примерами можно ознакомиться в документации. Ссылка находится в шапке.
                     </p>
                     
                     <h3>Padding и Margin</h3>
