--- a/lessons/lesson-5.html
+++ b/lessons/lesson-5.html
@@ -172,7 +172,7 @@
                     </p>
 
                     <p>
-                        Все эти классы помогают легко создавать адаптивные таблицы и изображения, избавляя разработчика от прописывания лишнего кода стилей. В этом уроке были разобраны лишь базовые вариации работы с изображениями и таблицами в bootstrap. Больше информации вы можете найти в официальной
+                        Все эти классы помогают легко создавать адаптивные таблицы и изображения, избавляя разработчика от прописывания лишнего кода стилей. В этом уроке были разобраны лишь базовые вариации работы с изображениями и таблицами в bootstrap. Больше информации вы можете найти в официальной документации.
                     </p>
 
                     <div class="lesson-btns col-12 col-lg-8 m-auto">
