--- a/lessons/lesson-7.html
+++ b/lessons/lesson-7.html
@@ -127,7 +127,7 @@
                     
 
                     <p>
-                        По умолчанию используется светлая тема навигации, но вы также можете применить <code>data-bs-theme="dark"</code> к <code>.navbar</code>  родительскому элементу темные цвета фона.
+                        По умолчанию используется светлая тема навигации, но вы также можете применить опцию <code>data-bs-theme="dark"</code> к <code>.navbar</code>  родительскому элементу темные цвета фона.
                     </p>
 
                     <div class="listing-container col-10 m-auto">
