--- a/lessons/lesson-9.html
+++ b/lessons/lesson-9.html
@@ -199,13 +199,13 @@
                     </p>
 
                     
-                    <button type="button" class="btn  col-md-2 col-6 m-auto btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    <button type="button" class="btn col-md-2 col-6 m-auto btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
                         Launch demo modal
                     </button>
                     
                     <div class="modal fade" data-bs-theme="dark" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog">
-                            <div class="modal-content">
+                            <div class="modal-content w-100">
                                 <div class="modal-header">
                                     <h4 class="modal-title fs-5" id="exampleModalLabel">Modal title</h4>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
