--- a/tests/test-5.html
+++ b/tests/test-5.html
@@ -93,13 +93,11 @@
 
                     <div class="modal fade" id="result" tabindex="-1" data-bs-backdrop="static" data-bs-keyboard="false">
                         <div class="modal-dialog">
-                            <div class="modal-content">
-                                
+                            <div class="modal-content h-100 w-100">
                                 <div class="modal-body">
                                     <p id="inmodal-text" class="text-center mt-3"></p>
                                 </div>
                                 <div class="modal-footer">
-                                
                                     <button type="button" data-bs-dismiss="modal" class="hero-btn hero-btn-second inmodal-btn mb-3">Ок</button>
                                 </div>
                             </div>
