tests answer fix

--- a/tests/final-test.html
+++ b/tests/final-test.html
@@ -57,8 +57,8 @@
                         <div class="question">
                             <h2 class="col-12 col-lg-6">Вопрос 2</h2>
                             <p>Какой процесс верстки сайта подразумевает использование Bootstrap?</p>
-                            <input type="radio" id="question-2-1" name="question-2"> <label for="question-2-1">Создание адаптивного макета</label>
-                            <input type="radio" id="question-2-2" name="question-2"> <label for="question-2-2">Кастомизация стилей</label>
+                            <input type="radio" id="question-2-1" name="question-2"> <label for="question-2-1">Создание адаптивного сайта</label>
+                            <input type="radio" id="question-2-2" name="question-2"> <label for="question-2-2">Перезапись стилей</label>
                             <input type="radio" id="question-2-3" name="question-2"> <label for="question-2-3">Подключение скриптов</label>
                         </div>
                         <div class="question">
