added margin between footer lists

--- a/lessons/lesson-2.html
+++ b/lessons/lesson-2.html
@@ -179,7 +179,7 @@
         </section>
     </main>
 
-    <footer class="d-flex align-items-center">
+    <<footer class="d-flex align-items-center">
         <div class="container">
             <div class="row justify-content-between">
                 <div class="footer-nav col-lg-3 d-flex flex-column">
@@ -191,7 +191,7 @@
                     <span><a target="_blank" href="https://blog.getbootstrap.com/">Блог</a></span>
                 </div>
 
-                <div class="footer-nav col-lg-4 d-flex flex-column">
+                <div class="footer-nav col-lg-4 d-flex mt-5 mt-lg-0 flex-column">
                     <p>Автор</p>
                     <span>Киценко И. В.</span>
                     <span>Ilyakitsenko@proton.me</span>
