--- a/lessons/lesson-6.html
+++ b/lessons/lesson-6.html
@@ -67,11 +67,11 @@
                     </div>
 
                     <p class="text-center">
-                        <button class="btn btn-primary">btn-primary</button>
-                        <button class="btn btn-secondary">btn-secondary</button>
-                        <button class="btn btn-success">btn-success</button>
-                        <button class="btn btn-warning">btn-warning</button>
-                        <button class="btn btn-danger">btn-danger</button>
+                        <button class="btn btn-primary mb-1">btn-primary</button>
+                        <button class="btn btn-secondary mb-1">btn-secondary</button>
+                        <button class="btn btn-success mb-1">btn-success</button>
+                        <button class="btn btn-warning mb-1">btn-warning</button>
+                        <button class="btn btn-danger mb-1">btn-danger</button>
                     </p>
 
                     <p>
@@ -294,7 +294,7 @@
                     <span><a target="_blank" href="https://blog.getbootstrap.com/">Блог</a></span>
                 </div>
 
-                <div class="footer-nav col-lg-4 d-flex flex-column">
+                <div class="footer-nav col-lg-4 d-flex mt-5 mt-lg-0 flex-column">
                     <p>Автор</p>
                     <span>Киценко И. В.</span>
                     <span>Ilyakitsenko@proton.me</span>
