--- a/lessons/lesson-8.html
+++ b/lessons/lesson-8.html
@@ -365,7 +365,7 @@
                     <span><a target="_blank" href="https://blog.getbootstrap.com/">Блог</a></span>
                 </div>
 
-                <div class="footer-nav col-lg-4 d-flex flex-column">
+                <div class="footer-nav col-lg-4 d-flex mt-5 mt-lg-0 flex-column">
                     <p>Автор</p>
                     <span>Киценко И. В.</span>
                     <span>Ilyakitsenko@proton.me</span>
