--- a/tests/test-4.html
+++ b/tests/test-4.html
@@ -122,7 +122,7 @@
                     <span><a target="_blank" href="https://blog.getbootstrap.com/">Блог</a></span>
                 </div>
 
-                <div class="footer-nav col-lg-4 d-flex flex-column">
+                <div class="footer-nav col-lg-4 d-flex mt-5 mt-lg-0 flex-column">
                     <p>Автор</p>
                     <span>Киценко И. В.</span>
                     <span>Ilyakitsenko@proton.me</span>
@@ -140,7 +140,7 @@
     <script src="../js/noty.min.js"></script>
 
     <script>
-        const right_answers = ['1-2', '2-4', '3-2', '4-2', '5-1'];
+        const right_answers = ['1-2', '2-4', '3-2', '4-1', '5-1'];
         const questions_count = document.getElementsByClassName('question').length
         const button = document.getElementById('send')
         const answer_options = document.querySelectorAll('input[type="radio"]');
