--- a/tests/test-6.html
+++ b/tests/test-6.html
@@ -120,7 +120,7 @@
                     <span><a target="_blank" href="https://blog.getbootstrap.com/">Блог</a></span>
                 </div>
 
-                <div class="footer-nav col-lg-4 d-flex flex-column">
+                <div class="footer-nav col-lg-4 d-flex mt-5 mt-lg-0 flex-column">
                     <p>Автор</p>
                     <span>Киценко И. В.</span>
                     <span>Ilyakitsenko@proton.me</span>
@@ -139,7 +139,7 @@
 
     <script>
         
-        const right_answers = ['1-3', '2-3', '3-1', '4-2', '5-4'];
+        const right_answers = ['1-3', '2-3', '3-1', '4-2', '5-3'];
         const questions_count = document.getElementsByClassName('question').length
         const button = document.getElementById('send')
         const answer_options = document.querySelectorAll('input[type="radio"]');
