--- a/tests/test-9.html
+++ b/tests/test-9.html
@@ -56,7 +56,7 @@
                         </div>
                         <div class="question">
                             <h2 class="col-12 col-lg-6">Вопрос 2</h2>
-                            <p>Как добавить верхний колонтитул к карточки?</p>
+                            <p>Как добавить верхний колонтитул к карточке?</p>
                             <input type="radio" id="question-2-1" name="question-2"> <label for="question-2-1"><code>.card-colontitul</code></label>
                             <input type="radio" id="question-2-2" name="question-2"> <label for="question-2-2"><code>.card-top</code></label>
                             <input type="radio" id="question-2-3" name="question-2"> <label for="question-2-3"><code>.card-link</code></label>
@@ -124,7 +124,7 @@
                     <span><a target="_blank" href="https://blog.getbootstrap.com/">Блог</a></span>
                 </div>
 
-                <div class="footer-nav col-lg-4 d-flex flex-column">
+                <div class="footer-nav col-lg-4 d-flex mt-5 mt-lg-0 flex-column">
                     <p>Автор</p>
                     <span>Киценко И. В.</span>
                     <span>Ilyakitsenko@proton.me</span>
